# RealtimeSafetyCheckHelpers

./: .clang-format  CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
include/: ScopedAllocationDetector.h
src/: ScopedAllocationDetector.cpp
test/: CMakeLists.txt  main.cpp
